	native gtk-button-new-from-stock) have been removed and `simple-dialog'
	is the only remaining function. A wrong export has been removed, too.

	* lisp/sawfish/gtk/Makefile.in
	* lisp/sawfish/cfg/shell.jl
	* lisp/sawfish/cfg/apply.jl
	* lisp/sawfish/cfg/widgets/keymap.jl
	* lisp/sawfish/cfg/widgets/match-window.jl
	* lisp/sawfish/gtk/widget-dialog.jl: updated for above change

2010-09-17  Christopher Brautsek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/match-window.jl
	* lisp/sawfish/wm/windows.jl: added `never-delete' window-matcher.
	Window matched by this can't be deleted by the `delete-window-safely'
	function, only by `delete-window' (which equals to `xkill').

	* lisp/sawfish/wm/ext/match-window.jl
	* lisp/sawfish/wm/commands/move-resize.jl: added `fixed-size' window-matcher.
	Window matched by this can't be resized by the `resize-window-interactively',
	`halve-window-size' or `double-window-size' functions, but by maximize-*.

	* lisp/sawfish/wm/keymaps.jl: by default the close-buttons calls `delete-window-safely'
	rather than `delete-window'.

2010-09-16  Teika kazura <teika@lavabit.com>
	* lisp/sawfish/wm/commands/grow-pack.jl
	* lisp/sawfish/wm/ext/window-history.jl
	* lisp/sawfish/wm/state/wm-spec.jl
	* man/news.texi
	* themes/mxflat/theme.jl: Minor doc, including news.

	* lisp/sawfish/wm/defaults.jl
	* lisp/sawfish/wm/user.jl: Cleanups around user.jl.
        Deleted fake support of ~/.sawfish/rc{,.jl,.jlc}. A file with a
	suffix was never read, but the code was in the guise of supporting
	them.
	Renaming of "sawmill" is not done when batch-mode. The code is
	pushed into a function.
	Deleted (require 'sawfish.wm.ext.error-handler) from
	`defaults.jl'. It is now meaningless because it's already opened
	by user.jl.

	* lisp/sawfish/wm/user.jl: Print stack trace on error during
	~/.sawfish/rc execution.

	* OPTIONS
	* lisp/sawfish/wm/defaults.jl
	* lisp/sawfish/wm/integration/gnome.jl
	* lisp/sawfish/wm/integration/kde.jl