@@ -288,7 +288,9 @@ menu-entries have been improved.
 If you run the configurator but the Sawfish window manager is absent,
 then an alert window is displayed before abortion.
 
-@item Module @code{3d-hack} is not autoloaded anymore.
+@item Module @code{3d-hack} is not autoloaded anymore. [Teika Kazura]
+
+@item widget-dialog.jl was merged into simple-dialog.jl [Christopher Bratusek]
 
 @item @code{sawfish-config} is now minimal, moving most of the contents to @code{sawfish.cfg.shell} [Teika Kazura]
 
