@@ -12,6 +12,10 @@
 	* lisp/sawfish/cfg/widgets/match-window.jl
 	* lisp/sawfish/gtk/widget-dialog.jl: updated for above change
 
+	* lisp/sawfish/gtk/widget-dialog.jl
+	* lisp/sawfish/gtk/widgets/simple-dialog.jl: merged widget-dialog.jl
+	into simple-dialog.jl
+
 2010-09-17  Christopher Brautsek <zanghar@freenet.de>
 	* lisp/sawfish/wm/ext/match-window.jl
 	* lisp/sawfish/wm/windows.jl: added `never-delete' window-matcher.
